ClusterDeployment/grafana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/ssl-services: "monitoring-grafana"
spec:
  rules:
  - host: grafana.ins.local
    http:
      paths:
      - path: /
        backend:
          serviceName: monitoring-grafana
          servicePort: http
